[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/battle_hud.gd" id="1_battle_hud"]

[node name="BattleHud" type="Control"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
script = ExtResource("1_battle_hud")

[node name="HandRoot" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ElixirBar" type="Control" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 664.0
offset_right = 820.0
offset_bottom = 700.0
mouse_filter = 2

[node name="BarBg" type="ColorRect" parent="ElixirBar"]
layout_mode = 0
offset_right = 360.0
offset_bottom = 30.0
color = Color(0.32, 0.11, 0.49, 0.66)

[node name="BarFill" type="ColorRect" parent="ElixirBar/BarBg"]
layout_mode = 0
offset_right = 190.0
offset_bottom = 30.0
color = Color(0.88, 0.45, 1, 0.97)

[node name="ElixirValue" type="Label" parent="ElixirBar"]
layout_mode = 0
offset_top = 2.0
offset_right = 360.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Elixir  0 / 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextCardPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1040.0
offset_top = 498.0
offset_right = 1226.0
offset_bottom = 638.0
mouse_filter = 2

[node name="NextTitle" type="Label" parent="NextCardPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 170.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.94, 0.94, 0.98, 1)
theme_override_font_sizes/font_size = 14
text = "Next"

[node name="NextName" type="Label" parent="NextCardPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 176.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.92, 0.92, 0.96, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NextCost" type="Label" parent="NextCardPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 106.0
offset_right = 176.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.97, 0.97, 1, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1
